--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "41-hw-react-sw-router",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://vladimirrogalev.github.io/home/luke",
+  "homepage": "https://vladimirrogalev.github.io/react-sw-router-v2/",
   "type": "module",
   "scripts": {
     "dev": "vite",
